--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,15 +11,24 @@ body {
   scroll-behavior: smooth;
   background-color: #101415;
 }
+.nav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: sticky;
+  top: 1vh;
+  z-index: 50;
+}
 .wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 100vh;
-  width: 100%;
+  width: max-content;
   background-color: #101415;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   margin-top: 2vh;
+  border: solid #101415;
   position: sticky;
   top: 3vh;
 }
@@ -55,6 +64,7 @@ label::before {
 input:checked + label::before {
   /* opacity: 1; */
   scale: 1 1;
+  transition: ease-in-out linear 0.5s;
 }
 input:checked + label {
   background: hsl(195 4% 20% / 1);
@@ -62,15 +72,18 @@ input:checked + label {
 }
 
 .tabsHolder {
+  /* width: fit-content; */
   background: hsl(210, 9%, 13%);
   padding: 0.8rem 1.2rem;
   border-radius: 100vh;
   display: flex;
   gap: 1.5rem;
+  cursor: pointer;
 }
 
 input {
   display: none;
+  cursor: pointer;
 }
 
 label:nth-of-type(1)::before {
