changes in linker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,15 @@ body {
   scroll-behavior: smooth;
   background-color: #101415;
 }
+.sticky-container {
+  height: 5rem;
+  z-index: 100;
+}
+#linker{
+  position: sticky;
+  top: 2vh;
+}
+
 .nav {
   display: flex;
   justify-content: center;
