--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,9 @@ body {
   width: 100%;
   position: sticky;
   top: 1vh;
-  /* opacity: 20; */
+  /* opacity: 100; */
+  cursor: default;
+  background: transparent;
 }
 .wrapper {
   display: flex;
@@ -36,7 +38,10 @@ body {
   /* border: solid #101415; */
   position: sticky;
   top: 3vh;
-  /* opacity: 0.5; */
+  /* opacity: 0.8; */
+  background: transparent;
+  transform: scale(0.7);
+  cursor: default;
 }
 label {
   position: relative;
@@ -49,17 +54,17 @@ label {
   border-radius: 100vh;
   /* width: 130px; */
   transition: ease linear 2s;
+  /* opacity: 100; */
 }
 label::before {
   content: "";
   position: absolute;
   height: 0.25rem;
   width: 50%;
-
+  opacity: 200;
   top: 0;
   left: 50%;
   transform: translate(-50%);
-
   border-radius: 100vh;
 
   background: hsl(0 0% 100%);
@@ -84,7 +89,7 @@ input:checked + label {
   border-radius: 100vh;
   display: flex;
   gap: 1.5rem;
-  cursor: pointer;
+  cursor: default;
 }
 
 input {
@@ -99,19 +104,19 @@ label:nth-of-type(2)::before {
   transform-origin: left;
 }
 
-#cards:before{
-  content: '';
+#cards:before {
+  content: "";
   top: -2px;
-  left:-2px;
+  left: -2px;
   right: -2px;
   bottom: -2px;
   background: white;
   z-index: -1;
 }
-#cards:after{
-  content: '';
+#cards:after {
+  content: "";
   top: -2px;
-  left:-2px;
+  left: -2px;
   right: -2px;
   bottom: -2px;
   background: white;
@@ -120,6 +125,6 @@ label:nth-of-type(2)::before {
 }
 
 #cards:before,
-#cards:after{
-  background: linear-gradient(235deg,#89ff00,#060c21,#00bcd4)
+#cards:after {
+  background: linear-gradient(235deg, #89ff00, #060c21, #00bcd4);
 }
