--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
 body {
   scroll-behavior: smooth;
   background-color: #101415;
+    
 }
 .sticky-container {
   height: 5rem;
@@ -44,17 +45,19 @@ body {
   cursor: default;
 }
 label {
+  background: transparent;
   position: relative;
   text-align: center;
   text-decoration: none;
   font-size: 1.5rem;
   color: hsl(0 0% 100% / 0.5);
   background: hsl(195, 4%, 20% / 0);
-  padding: 0.5rem 1.5rem;
+  padding: 0.8rem 2rem;
   border-radius: 100vh;
   /* width: 130px; */
   transition: ease linear 2s;
   /* opacity: 100; */
+  opacity: 1;
 }
 label::before {
   content: "";
@@ -66,14 +69,14 @@ label::before {
   left: 50%;
   transform: translate(-50%);
   border-radius: 100vh;
-
+opacity: 1;
   background: hsl(0 0% 100%);
   box-shadow: 0 0 1rem 1px white, 0 4px 1rem 1px white;
   scale: 0 1;
   transition: ease-in-out linear 0.5s;
 }
 input:checked + label::before {
-  /* opacity: 1; */
+  opacity: 1;
   scale: 1 1;
   transition: ease-in-out linear 0.5s;
 }
@@ -85,16 +88,21 @@ input:checked + label {
 .tabsHolder {
   /* width: fit-content; */
   background: hsl(210, 9%, 13%);
+  background: transparent;
+  opacity: 1;
+  border: solid 0.2px rgba(255, 255, 255, .5);
   padding: 0.8rem 1.2rem;
-  border-radius: 100vh;
+  border-radius: 120vh;
   display: flex;
   gap: 1.5rem;
+  scale: 0.9;
   cursor: default;
 }
 
 input {
   display: none;
   cursor: pointer;
+  opacity: 1;
 }
 
 label:nth-of-type(1)::before {
