--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@ body {
   background: transparent;
   transform: scale(0.7);
   cursor: default;
+  z-index: 100;
 }
 label {
   background: transparent;
@@ -97,8 +98,10 @@ input:checked + label {
   border-radius: 120vh;
   display: flex;
   gap: 1.5rem;
-  scale: 0.9;
+  scale: 1;
   cursor: default;
+  z-index: 100;
+  
 }
 
 input {
