--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,16 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  /* border: solid 2px white; */
 }
 
 body {
   scroll-behavior: smooth;
   background-color: #161818;
   overflow-x: hidden;
+  margin: 0;
+  padding:0;
 }
 .sticky-container {
   height: 5rem;
