--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@ body {
   background-color: #161818;
   overflow-x: hidden;
   margin: 0;
-  padding:0;
+  padding: 0;
 }
 .sticky-container {
   height: 5rem;
@@ -32,25 +32,25 @@ body {
   background: transparent;
   z-index: 100;
 }
-#linker{
+#linker {
   z-index: 100;
 }
-#links{
+#links {
   z-index: 100;
 }
-#link1{
+#link1 {
   z-index: 100;
 }
-#link2{
+#link2 {
   z-index: 100;
 }
-#link3{
+#link3 {
   z-index: 100;
 }
-#greet{
+#greet {
   z-index: 100;
 }
-#downloadResume{
+#downloadResume {
   z-index: 100;
 }
 .wrapper {
@@ -62,7 +62,7 @@ body {
   /* background-color: #101415; */
   /* padding: 0 1rem; */
   margin-top: 2vh;
-  border: solid 2px rgba(255, 255, 255, .5);
+  border: solid 2px rgba(255, 255, 255, 0.5);
   position: sticky;
   top: 3vh;
   /* opacity: 0.8; */
@@ -78,13 +78,13 @@ label {
   text-decoration: none;
   font-size: 1.5rem;
   color: hsl(0 0% 100% / 0.5);
-  background: hsl(195, 4%, 20% / 0);
+  /* background: hsl(195, 4%, 20% / 0); */
   padding: 0.8rem 2rem;
   border-radius: 100vh;
   /* width: 130px; */
   transition: ease linear 2s;
   /* opacity: 100; */
-  cursor: pointer; 
+  cursor: pointer;
   opacity: 1;
 }
 label::before {
@@ -97,7 +97,7 @@ label::before {
   left: 50%;
   transform: translate(-50%);
   border-radius: 100vh;
-opacity: 1;
+  opacity: 1;
   background: hsl(0 0% 100%);
   box-shadow: 0 0 1rem 1px white, 0 4px 1rem 1px white;
   scale: 0 1;
@@ -128,13 +128,13 @@ input:checked + label {
   scale: 1;
   cursor: default;
   z-index: 100;
-  
 }
 
 input {
   display: none;
   cursor: pointer;
-  opacity: 1;backdrop-filter: blur(10px);
+  opacity: 1;
+  backdrop-filter: blur(10px);
 }
 
 label:nth-of-type(1)::before {
