--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,3 +173,30 @@ label:nth-of-type(1)::before {
 label:nth-of-type(2)::before {
   transform-origin: left;
 }
+
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.image-container img {
+  display: block;
+}
+
+.image-container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.848));
+  border-radius: 25px;
+  pointer-events: none;
+}
+
+@media (max-width: 670px) {
+  .image-container::after {
+    scale: 0.75;
+  }
+}
