--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 html {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   scroll-behavior: smooth;
 }
 body {
@@ -51,72 +51,58 @@ body {
     top: -10%;
   }
 }
+/* start */
 .nav {
   display: flex;
   justify-content: center;
   width: 100%;
   position: sticky;
-  top: 2vh;
-  /* opacity: 100; */
+  top: 3vh;
   cursor: default;
   background: transparent;
   z-index: 100;
+  border-radius: 50vh;
 }
-#linker {
-  z-index: 100;
-}
-#links {
-  z-index: 100;
-}
-#link1 {
-  z-index: 100;
-}
-#link2 {
-  z-index: 100;
-}
-#link3 {
-  z-index: 100;
-}
-#greet {
-  z-index: 100;
-}
+
+#linker,
+#links,
+#link1,
+#link2,
+#link3,
+#greet,
 #downloadResume {
   z-index: 100;
 }
+
 .wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 100vh;
   width: max-content;
-  /* background-color: #101415; */
-  /* padding: 0 1rem; */
   margin-top: 2vh;
-  border: solid 2px rgba(255, 255, 255, 0.5);
-  position: sticky;
-  top: 3vh;
-  /* opacity: 0.8; */
+  border: solid rgba(255, 255, 255, 0.3);
   background: transparent;
   transform: scale(0.7);
   cursor: default;
   z-index: 100;
 }
+
 label {
   background: transparent;
   position: relative;
   text-align: center;
   text-decoration: none;
   font-size: 1.5rem;
-  color: hsl(0 0% 100% / 0.5);
-  /* background: hsl(195, 4%, 20% / 0); */
+  color: hsl(0 0% 100% / 0.7);
   padding: 0.8rem 2rem;
   border-radius: 100vh;
-  /* width: 130px; */
-  transition: ease linear 2s;
-  /* opacity: 100; */
   cursor: pointer;
   opacity: 1;
+  transition: background 0.5s ease-in-out, color 0.5s ease-in-out,
+    transform 0.2s ease;
 }
+
 label::before {
   content: "";
   position: absolute;
@@ -125,32 +111,36 @@ label::before {
   opacity: 200;
   top: 0;
   left: 50%;
-  transform: translate(-50%);
+  transform: translateX(-50%) scaleX(0);
   border-radius: 100vh;
   opacity: 1;
   background: hsl(0 0% 100%);
-  box-shadow: 0 0 1rem 1px white, 0 4px 1rem 1px white;
-  scale: 0 1;
-  transition: ease-in-out linear 0.5s;
-  backdrop-filter: blur(10px);
+  box-shadow: 0 0 1.5rem 2px white, 0 4px 1rem 1px white;
+  transition: transform 0.3s ease;
+  backdrop-filter: blur(15px);
 }
+
 input:checked + label::before {
-  opacity: 1;
-  scale: 1 1;
-  transition: ease-in-out linear 0.5s;
+  transform: translateX(-50%) scaleX(1);
 }
+
 input:checked + label {
   background: hsl(195 4% 20% / 1);
   color: hsl(0 0% 100%);
+  transform: scale(1.1);
+}
+
+label:nth-of-type(1)::before {
+  transform-origin: right;
+}
+label:nth-of-type(2)::before {
+  transform-origin: left;
 }
 
 #tabsHolder {
-  /* width: fit-content; */
-  background: hsl(210, 9%, 0.6);
-  /* background: transparent; */
-  backdrop-filter: blur(11px);
+  /* background: hsl(210, 9%, 0.6); */
+  backdrop-filter: blur(10px);
   opacity: 1;
-  /* border: solid 0.2px rgba(255, 255, 255, .5); */
   padding: 0.8rem 1.2rem;
   border-radius: 120vh;
   display: flex;
@@ -164,15 +154,10 @@ input {
   display: none;
   cursor: pointer;
   opacity: 1;
-  backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px); */
 }
 
-label:nth-of-type(1)::before {
-  transform-origin: right;
-}
-label:nth-of-type(2)::before {
-  transform-origin: left;
-}
+/* end */
 
 .image-container {
   position: relative;
@@ -199,4 +184,34 @@ label:nth-of-type(2)::before {
   .image-container::after {
     scale: 0.75;
   }
+}
+
+/* scroll bar */
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #000000;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: transparent;
+}
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #ffffff5d transparent;
+  scroll-behavior: smooth;
+}
+
+body {
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
