--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -224,9 +224,22 @@ body {
   align-items: center;
 }
 
+.scroller-container2 {
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .scroller {
   display: flex;
   animation: scroll 30s linear infinite;
+}
+
+.scroller2 {
+  display: flex;
+  animation: scroll2 30s linear infinite;
 }
 
 @keyframes scroll {
@@ -235,6 +248,15 @@ body {
   }
   100% {
     transform: translateX(-100%);
+  }
+}
+
+@keyframes scroll2 {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
   }
 }
 
