--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,8 @@ html {
   margin: 0;
   padding: 0;
   /* overflow-x: hidden; */
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
+  --scroll-behavior: smooth !important;
 }
 body {
   scroll-behavior: smooth;
