--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -267,3 +267,257 @@ body {
   filter: grayscale(1);
   margin: 0 1rem;
 }
+
+/* download resume button */
+.button {
+  --black-700: hsla(0 0% 12% / 1);
+  --border_radius: 9999px;
+  --transtion: 0.3s ease-in-out;
+  --offset: 2px;
+
+  cursor: pointer;
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  transform-origin: center;
+
+  padding: 1rem 2rem;
+  background-color: transparent;
+
+  border: none;
+  border-radius: var(--border_radius);
+  transform: scale(calc(1 + (var(--active, 0) * 0.1)));
+
+  transition: transform var(--transtion);
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 100%;
+  height: 100%;
+  background-color: var(--black-700);
+
+  border-radius: var(--border_radius);
+  box-shadow: inset 0 2px hsla(0, 1%, 29%, 0.674), inset 0 -1px 2px 0 hsl(0, 0%, 0%),
+    0px 4px 10px -4px hsla(0 0% 0% / calc(1 - var(--active, 0))),
+    0 0 0 calc(var(--active, 0) * 0.375rem) hsl(0, 1%, 16%);
+  transition: all var(--transtion);
+  z-index: 0;
+}
+
+.button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 100%;
+  height: 100%;
+  background-color: hsla(300, 1%, 13%, 0.75);
+  background-image: radial-gradient(
+      at 51% 89%,
+      rgba(255, 255, 255, 0.399) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 100% 100%, rgba(31, 31, 32, 0.819) 0px, transparent 50%),
+    radial-gradient(at 22% 91%, rgba(41, 39, 39, 0.752) 0px, transparent 50%);
+  background-position: top;
+
+  opacity: var(--active, 0);
+  border-radius: var(--border_radius);
+  transition: opacity var(--transtion);
+  z-index: 2;
+}
+
+.button:is(:hover, :focus-visible) {
+  --active: 1;
+}
+.button:active {
+  transform: scale(1);
+}
+
+.button .dots_border {
+  --size_border: calc(100% + 2px);
+
+  overflow: hidden;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: var(--size_border);
+  height: var(--size_border);
+  background-color: transparent;
+
+  border-radius: var(--border_radius);
+  z-index: -10;
+}
+
+.button .dots_border::before {
+  content: "";
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform-origin: left;
+  transform: rotate(0deg);
+
+  width: 100%;
+  height: 2rem;
+  background-color: white;
+
+  mask: linear-gradient(transparent 0%, white 120%);
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.button .sparkle {
+  position: relative;
+  z-index: 10;
+
+  width: 1.75rem;
+}
+
+.button .sparkle .path {
+  fill: currentColor;
+  stroke: currentColor;
+
+  transform-origin: center;
+
+  color: hsl(0, 0%, 100%);
+}
+
+.button:is(:hover, :focus) .sparkle .path {
+  animation: path 1.5s linear 0.5s infinite;
+}
+
+.button .sparkle .path:nth-child(1) {
+  --scale_path_1: 1.2;
+}
+.button .sparkle .path:nth-child(2) {
+  --scale_path_2: 1.2;
+}
+.button .sparkle .path:nth-child(3) {
+  --scale_path_3: 1.2;
+}
+
+@keyframes path {
+  0%,
+  34%,
+  71%,
+  100% {
+    transform: scale(1);
+  }
+  17% {
+    transform: scale(var(--scale_path_1, 1));
+  }
+  49% {
+    transform: scale(var(--scale_path_2, 1));
+  }
+  83% {
+    transform: scale(var(--scale_path_3, 1));
+  }
+}
+
+.button .text_button {
+  position: relative;
+  z-index: 10;
+
+  background: transparent;
+  background-clip: text;
+  font-size: 1.2rem;
+  color: rgba(245, 245, 245, 0.807);
+}
+
+/* contact me btn */
+
+.icon {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    fill: currentColor;
+}
+
+.contact-button {
+    position: relative;
+    -webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 1.2em;
+    border: 2px solid rgba(141, 137, 137, 0.701);
+    border-radius: 4px;
+    padding: 10px 40px 10px 45px;
+    transition: 0.3s ease-in-out;
+}
+
+.contact-button span {
+    text-transform: none;
+    font-weight: 600;
+    position: absolute;
+    color: #000000;
+    top: 10px;
+    left: 30px;
+    opacity: 0;
+    transition: all 0s ease 0s;
+}
+
+.contact-button:hover {
+    transition: 0.3s ease-in-out;
+    border: 2px solid white;
+    border-radius: 50px;
+    background-color: white;
+}
+
+.contact-button:hover > span {
+    opacity: 1;
+    transition: all 0.25s ease-in-out 0.1s;
+}
+
+.contact-button:hover:before {
+    transition: 0.3s ease-in-out;
+    background-color: #EE283E;
+}
+
+.contact-button:before,
+.contact-button:after {
+    content: "";
+    position: absolute;
+    top: -14px;
+    left: -12px;
+    width: 132px;
+    height: 25px;
+}
+
+.contact-button:before {
+    border: 2px solid #EE283E;
+    background-color: #2e3030;
+    transform: skew(-25deg);
+    transition: 0.3s ease-in-out;
+}
+
+.contact-button:after {
+    content: "Available for work";
+    font-size: 0.45em;
+    top: -7px;
+    left: 0px;
+    color: white;
+}
