--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -277,6 +277,7 @@ body {
 
   cursor: pointer;
   position: relative;
+  z-index: 0;
 
   display: flex;
   align-items: center;
@@ -451,6 +452,7 @@ body {
     width: 1em;
     height: 1em;
     fill: currentColor;
+    z-index: 0;
 }
 
 .contact-button {
@@ -458,14 +460,14 @@ body {
     -webkit-perspective: 1000;
     -webkit-backface-visibility: hidden;
     -webkit-transform: translate3d(0, 0, 0);
-    color: white;
+    color: rgba(245, 245, 245, 0.807);
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 500;
     font-size: 1.2em;
     border: 2px solid rgba(141, 137, 137, 0.701);
     border-radius: 4px;
-    padding: 10px 40px 10px 45px;
+    padding: 10px 20px 10px 20px;
     transition: 0.3s ease-in-out;
 }
 
@@ -475,7 +477,7 @@ body {
     position: absolute;
     color: #000000;
     top: 10px;
-    left: 30px;
+    left: 20px;
     opacity: 0;
     transition: all 0s ease 0s;
 }
@@ -509,7 +511,7 @@ body {
 
 .contact-button:before {
     border: 2px solid #EE283E;
-    background-color: #2e3030;
+    background-color: rgb(46, 44, 44);
     transform: skew(-25deg);
     transition: 0.3s ease-in-out;
 }
