--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,12 +26,9 @@ body {
   z-index: 100;
 }
 .bggrad1 {
-  position: absolute;
   width: 105px;
   height: 105px;
   border-radius: 100%;
-  top: 28.8%;
-  left: 30.5%;
   background: linear-gradient(180deg, #b7b9b593, #4f4b4bdd, #161616c2);
   box-shadow: 0px 6px 3.9px 0px rgba(255, 255, 255, 0.53) inset;
   opacity: 0.9;
@@ -275,6 +272,8 @@ body {
   --transtion: 0.3s ease-in-out;
   --offset: 2px;
 
+  scale: 0.9;
+
   cursor: pointer;
   position: relative;
   z-index: 0;
@@ -285,7 +284,7 @@ body {
 
   transform-origin: center;
 
-  padding: 1rem 2rem;
+  padding: 1rem;
   background-color: transparent;
 
   border: none;
@@ -293,6 +292,12 @@ body {
   transform: scale(calc(1 + (var(--active, 0) * 0.1)));
 
   transition: transform var(--transtion);
+}
+
+@media screen and (max-width: 600px) {
+  .button {
+    scale: 0.9;
+  }
 }
 
 .button::before {
@@ -307,7 +312,8 @@ body {
   background-color: var(--black-700);
 
   border-radius: var(--border_radius);
-  box-shadow: inset 0 2px hsla(0, 1%, 29%, 0.674), inset 0 -1px 2px 0 hsl(0, 0%, 0%),
+  box-shadow: inset 0 2px hsla(0, 1%, 29%, 0.674),
+    inset 0 -1px 2px 0 hsl(0, 0%, 0%),
     0px 4px 10px -4px hsla(0 0% 0% / calc(1 - var(--active, 0))),
     0 0 0 calc(var(--active, 0) * 0.375rem) hsl(0, 1%, 16%);
   transition: all var(--transtion);
@@ -448,78 +454,79 @@ body {
 /* contact me btn */
 
 .icon {
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    fill: currentColor;
-    z-index: 0;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  z-index: 0;
 }
 
 .contact-button {
-    position: relative;
-    -webkit-perspective: 1000;
-    -webkit-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
-    color: rgba(245, 245, 245, 0.807);
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 1.2em;
-    border: 2px solid rgba(141, 137, 137, 0.701);
-    border-radius: 4px;
-    padding: 10px 20px 10px 20px;
-    transition: 0.3s ease-in-out;
+  position: relative;
+  -webkit-perspective: 1000;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  color: rgba(245, 245, 245, 0.807);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 1.2em;
+  border: 2px solid rgba(141, 137, 137, 0.701);
+  border-radius: 15px;
+  padding: 10px 20px 10px 20px;
+  transition: 0.3s ease-in-out;
+  scale: 0.8;
 }
 
 .contact-button span {
-    text-transform: none;
-    font-weight: 600;
-    position: absolute;
-    color: #000000;
-    top: 10px;
-    left: 20px;
-    opacity: 0;
-    transition: all 0s ease 0s;
+  text-transform: none;
+  font-weight: 600;
+  position: absolute;
+  color: #000000;
+  top: 10px;
+  left: 20px;
+  opacity: 0;
+  transition: all 0s ease 0s;
 }
 
 .contact-button:hover {
-    transition: 0.3s ease-in-out;
-    border: 2px solid white;
-    border-radius: 50px;
-    background-color: white;
+  transition: 0.3s ease-in-out;
+  border: 2px solid white;
+  border-radius: 50px;
+  background-color: white;
 }
 
 .contact-button:hover > span {
-    opacity: 1;
-    transition: all 0.25s ease-in-out 0.1s;
+  opacity: 1;
+  transition: all 0.25s ease-in-out 0.1s;
 }
 
 .contact-button:hover:before {
-    transition: 0.3s ease-in-out;
-    background-color: #EE283E;
+  transition: 0.3s ease-in-out;
+  background-color: #ee283e;
 }
 
 .contact-button:before,
 .contact-button:after {
-    content: "";
-    position: absolute;
-    top: -14px;
-    left: -12px;
-    width: 132px;
-    height: 25px;
+  content: "";
+  position: absolute;
+  top: -14px;
+  left: -12px;
+  width: 132px;
+  height: 25px;
 }
 
 .contact-button:before {
-    border: 2px solid #EE283E;
-    background-color: rgb(46, 44, 44);
-    transform: skew(-25deg);
-    transition: 0.3s ease-in-out;
+  border: 2px solid #ee283e;
+  background-color: rgb(46, 44, 44);
+  transform: skew(-25deg);
+  transition: 0.3s ease-in-out;
 }
 
 .contact-button:after {
-    content: "Available for work";
-    font-size: 0.45em;
-    top: -7px;
-    left: 0px;
-    color: white;
+  content: "Available for work";
+  font-size: 0.45em;
+  top: -7px;
+  left: 0px;
+  color: white;
 }
